--- a/.github/workflows/deployApp.yaml
+++ b/.github/workflows/deployApp.yaml
@@ -20,7 +20,7 @@ permissions:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build-and-deploy:
-    runs-on: self-hosted
+    runs-on: arc-runner-set
     steps:
     - name: Checkout source code 
       uses: actions/checkout@v3
